<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    tools:context="work.viphat.namecard.MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            >


            <TextView
                android:id="@+id/txtBasicInfo"
                android:text="@string/basic_info"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorDarkRed"
                />

            <ImageView
                android:src="@drawable/ic_timer_auto"
                android:layout_width="wrap_content"
                android:layout_height="18sp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_toLeftOf="@id/txtBasicInfo"
                android:layout_toStartOf="@id/txtBasicInfo"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorDarkRed"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>


        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />

        <EditText
            android:id="@+id/strUserName"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/avatar"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />

        <LinearLayout
            android:layout_column="1"
            android:layout_row="2"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >

            <ImageView
                android:src="@drawable/ninja"
                android:id="@+id/imgAvatar"
                android:layout_height="72dp"
                android:layout_width="72dp"
                android:scaleType="centerCrop"
                />

            <Button
                android:id="@+id/ButtonLoadPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/Browse"
                android:onClick="loadPicture"
                />

        </LinearLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/education"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />

        <RadioGroup
            android:id="@+id/radioEducation"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <RadioButton
                android:id="@+id/radioEducation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_1"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/radioEducation2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_2"
                />
            <RadioButton
                android:id="@+id/radioEducation3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_3"
                />

        </RadioGroup>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/field"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />

        <Spinner
            android:id="@+id/spinnerField"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:entries="@array/spinnerField"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >

        </Spinner>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/work_place"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />

        <EditText
            android:id="@+id/strWorkPlace"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginTop="16dp"
            android:layout_columnSpan="2"
            android:layout_row="6"
            >


            <TextView
                android:id="@+id/txtBasicContact"
                android:text="@string/basic_contact"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorDarkRed"
                />

            <ImageView
                android:src="@drawable/ic_contacts"
                android:layout_width="wrap_content"
                android:layout_height="18sp"
                android:layout_marginRight="4dp"
                android:layout_marginEnd="4dp"
                android:layout_toLeftOf="@id/txtBasicContact"
                android:layout_toStartOf="@id/txtBasicContact"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorDarkRed"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/address"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />

        <EditText
            android:id="@+id/strAddress"
            android:layout_column="1"
            android:layout_row="7"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/email"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />

        <EditText
            android:id="@+id/strEmail"
            android:layout_column="1"
            android:layout_row="8"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/phone"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            />

        <EditText
            android:id="@+id/strPhone"
            android:inputType="phone"
            android:layout_column="1"
            android:layout_row="9"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <RelativeLayout
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/unnamed"
                android:background="@android:color/transparent"
                android:onClick="generateOutput"
                />
        </RelativeLayout>



    </GridLayout>


</RelativeLayout>
</ScrollView>