<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    tools:context="work.viphat.namecard.NameCardActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="64dp"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:paddingTop="64dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >


            <LinearLayout
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >



                <ImageView
                    android:id="@+id/imgAvatar"
                    android:src="@drawable/ninja"
                    android:layout_height="132dp"
                    android:layout_width="132dp"
                    android:layout_margin="16dp"
                    />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/user_name"
                            android:textSize="20sp"
                            android:id="@+id/labelUserName"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/field"
                            android:textSize="16sp"
                            android:id="@+id/labelField"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/work_place"
                            android:textSize="16sp"
                            android:id="@+id/labelWorkplace"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/colorDarkRed"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textSize="16sp"
                            android:id="@+id/labelAddress"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="16sp"
                            android:id="@+id/labelEmail"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textSize="16sp"
                            android:id="@+id/labelPhone"
                            />

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_weight="1"-->
                <!-->-->

                <!--<ImageButton-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/ic_cloud_download"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:background="@android:color/transparent"-->
                    <!--android:onClick="exportAsFile"-->
                    <!--/>-->

            <!--</RelativeLayout>-->

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
